# mc-agent-toolkit

./: .gitignore  .gitmodules  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  README.md  daily_catchup.md  install.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/next-step-prompts/: ship.md
.claude/rules/: skills.md
.cursor-plugin/: marketplace.json
.github/workflows/: compare-trace-tests.yml  instrument-agent-tests.yml  release-on-tag.yml  validate.yml
.work/yet-631-push-ingestion-to-mcd-agent/: plan.md
docs/: plugin-architecture-guide.md  skill-discoverability-plan.md
plugins/: README.md
plugins/claude-code/evals/: .env.example  .envrc  .gitignore  Makefile  README.md  constants.py  models.py  pyproject.toml  run_evals.py  run_live_evals.py
plugins/claude-code/evals/compare-trace/: trigger-evals.json
plugins/claude-code/evals/context-detection/: live-evals-dev.yaml
plugins/claude-code/evals/incident-response/: live-evals-dev.yaml
plugins/claude-code/evals/instrument-agent/: live-evals-dev.yaml  trigger-evals.json
plugins/claude-code/evals/monitoring-advisor/: live-evals-dev.yaml  live-evals-prod.yaml  trigger-evals.json
plugins/claude-code/evals/prevent/: live-evals-dev.yaml  trigger-evals.json
schemas/: mac-schema.json
scripts/: bump-version.sh  release.sh  validate-next-steps.py
skills/: CHAINING.md  README.md
skills/instrument-agent/tests/fixtures/pep621-pyproject/: pyproject.toml
skills/instrument-agent/tests/fixtures/poetry-pyproject/: pyproject.toml
triage/: team-andes.md  test_flow1.md
(+500 files in other folders)
